# Nimbus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.tr.md  Vers.md  latest.diff
Pkgs/com.qcl.test/: CMakeLists.txt
Pkgs/com.qcl.test/Des/: Main.qdl
Pkgs/com.qcl.test/Dev/: Main.cc
Pkgs/lib.qaos.basis.dev/: CMakeLists.txt
Pkgs/lib.qaos.basis.dev/Inc/: Basis.h
Pkgs/lib.qaos.jconf/: CMakeLists.txt
Pkgs/lib.qaos.jconf.dev/: CMakeLists.txt
Pkgs/lib.qaos.jconf.dev/Inc/: JConf.h  JConf.hh
Pkgs/lib.qaos.jconf/Dev/: JConf.cc
Pkgs/lib.qaos.qcl/: CMakeLists.txt
Pkgs/lib.qaos.qcl.dev/: CMakeLists.txt
Pkgs/lib.qaos.qcl.dev/Inc/qcl/: Application.hh  Control.hh  DynamicLoad.hh  Effect.hh  Graphic.hh  Input.hh  Platform.hh  Popup.hh  Types.hh  View.hh  Window.hh
Pkgs/lib.qaos.qcl.platform.nand/: Package.conf
Pkgs/lib.qaos.qcl.platform.nand/Dev/: Platform_NAnd.cc
Pkgs/lib.qaos.qcl.platform.x11/: CMakeLists.txt
Pkgs/lib.qaos.qcl.platform.x11/Dev/: Platform_X11.cc
Pkgs/lib.qaos.qcl.qgl/: CMakeLists.txt
Pkgs/lib.qaos.qcl.qgl.dev/: CMakeLists.txt
Pkgs/lib.qaos.qcl.qstd/: CMakeLists.txt
Pkgs/lib.qaos.qcl.qstd.dev/: CMakeLists.txt
Pkgs/lib.qaos.qcl.qstd.dev/Inc/qstd/: Standard.hh
Pkgs/lib.qaos.qcl.qstd/Dev/: Standard.cc
Pkgs/lib.qaos.qcl/Dev/: Application.cc  Control.cc  DynamicLoad.cc  Effect.cc  Graphic.cc  Popup.cc  View.cc  Window.cc
app/: CMakeLists.txt
app/res/design/: Main.qdl
app/src/: main.cc
pkgs/com.qcl.test/: CMakeLists.txt
pkgs/com.qcl.test/res/design/: Main.qdl
pkgs/com.qcl.test/src/: Main.cc
pkgs/com.test.qcl/: CMakeLists.txt
pkgs/com.test.qcl/src/: main.cc
pkgs/lib.qaos.basis/inc/: Basis.h  Basis.hh  basis.hh
pkgs/lib.qaos.qcl/: CMakeLists.txt
pkgs/lib.qaos.qcl.ds/: CMakeLists.txt
pkgs/lib.qaos.qcl.ds/inc/: DS.hh
pkgs/lib.qaos.qcl.ds/inc/ds/: ds.hh
pkgs/lib.qaos.qcl.ds/src/: DS.cc  ds.cc
pkgs/lib.qaos.qcl.platform.nand/: CMakeLists.txt
pkgs/lib.qaos.qcl.platform.nand/Dev/: Platform_NAnd.cc
pkgs/lib.qaos.qcl.platform.wayland/: CMakeLists.txt
pkgs/lib.qaos.qcl.platform.wayland/inc/: types.hh
pkgs/lib.qaos.qcl.platform.wayland/src/: Platform_Wayland.cc  listeners.cc  platform.cc
pkgs/lib.qaos.qcl.platform.win/: CMakeLists.txt
pkgs/lib.qaos.qcl.platform.win/src/: Platform_Win.cc
pkgs/lib.qaos.qcl.qstd/: CMakeLists.txt
pkgs/lib.qaos.qcl.qstd/inc/qstd/: Effects.hh  Monet.hh  Standard.hh  effects.hh  standard.hh  std_card.hh  std_check.hh  std_chip.hh  std_choice.hh  std_edit.hh  std_form.hh  std_grid.hh  std_icon.hh  std_interval.hh  std_layout.hh  std_multi_progbar.hh  std_multiprogbar.hh  std_popup_menu.hh  std_progbar.hh  std_radio.hh  std_slider.hh  std_tabs.hh  std_text.hh  std_toggle.hh
pkgs/lib.qaos.qcl.qstd/src/: Effects.cc  Monet.cc  Standard.cc  effects.cc  monet.cc  standard.cc  std_card.cc  std_check.cc  std_chip.cc  std_choice.cc  std_dialog.cc  std_edit.cc  std_form.cc  std_grid.cc  std_icon.cc  std_interval.cc  std_layout.cc  std_layout_flow.cc  std_layout_horz.cc  std_layout_vert.cc  std_multiprogbar.cc  std_popup_menu.cc  std_progbar.cc  std_radio.cc  std_slider.cc  std_tabs.cc  std_text.cc  std_toggle.cc
pkgs/lib.qaos.qcl/inc/qcl/: Animator.hh  Application.hh  DynamicLoad.hh  Effect.hh  Object.hh  Platform.hh  Popup.hh  Scrolling.hh  Types.hh  View.hh  Visual.hh  Widget.hh  Window.hh  animator.hh  application.hh  effect.hh  object.hh  popup.hh  scrolling.hh  types.hh  view.hh  visual.hh  widget.hh  window.hh
pkgs/lib.qaos.qcl/src/: Animator.cc  Application.cc  DynamicLoad.cc  Effect.cc  Object.cc  Platform.cc  Scrolling.cc  View.cc  Visual.cc  Widget.cc  Window.cc  animator.cc  application.cc  dynamicLoad.cc  effect.cc  object.cc  scrolling.cc  view.cc  visual.cc  widget.cc  window.cc
pkgs/lib.qaos.skia/: CMakeLists.txt
pkgs/lib.qaos.vfs/: CMakeLists.txt
pkgs/lib.qaos.vfs/inc/: VFS.hh
pkgs/lib.qaos.vfs/inc/vfs/: vfs.hh  vfs_file.hh  vfs_res.hh
pkgs/lib.qaos.vfs/src/: VFS.cc  VFS_file.cc  VFS_resource.cc  vfs.cc  vfs_file.cc  vfs_res.cc
platform/: CMakeLists.txt
platform/wayland/: CMakeLists.txt
platform/wayland/src/: listeners.cc  listeners.hh  platform.cc  types.hh
qcl/: animator.cc  animator.hh  application.cc  application.hh  basis.hh  dynamicLoad.cc  dynamicLoad.hh  effect.cc  effect.hh  object.hh  platform.cc  platform.hh  popup.hh  scrolling.cc  scrolling.hh  types.hh  view.cc  view.hh  visual.cc  visual.hh  widget.cc  widget.hh  window.cc  window.hh
qcl/ds/: ds.cc  ds.hh
qcl/vfs/: vfs.cc  vfs.hh  vfs_embed.cc  vfs_embed.hh  vfs_file.cc  vfs_file.hh
qstd/: effects.cc  effects.hh  monet.cc  monet.hh  standard.cc  standard.hh  std_card.cc  std_card.hh  std_check.cc  std_check.hh  std_chip.cc  std_chip.hh  std_choice.cc  std_choice.hh  std_dialog.cc  std_dialog.hh  std_edit.cc  std_edit.hh  std_form.cc  std_form.hh  std_grid.cc  std_grid.hh  std_icon.cc  std_icon.hh  std_interval.hh  std_layout.cc  std_layout.hh  std_layout_flow.cc  std_layout_flow.hh  std_layout_horz.cc  std_layout_horz.hh  std_layout_vert.cc  std_layout_vert.hh  std_multi_progbar.cc  std_multi_progbar.hh  std_popup_menu.cc  std_popup_menu.hh  std_progbar.cc  std_progbar.hh  std_radio.cc  (+11 more)
script/: qmc.py
scripts/: compile_skia.sh  qmc.py  skia_linux.gn
